# FoodManagement

./: .gitignore  .gitmodules  2  CMakeLists.txt  compile_commands.json  food.json  main.cc  main.qml  qml.qrc
components/database/: CMakeLists.txt
components/database/public/: database.hh
components/database/src/: database.cc
components/ui/: CMakeLists.txt
components/ui/public/: ui.hh
components/ui/src/: ui.cc
components/ui/views/: DbLoadView.qml
components/units/: CMakeLists.txt
components/units/public/: units.hh
components/units/src/: units.cc
components/units/test/: units_test.cc
